src/styles/main.css
@font-face {
    font-family: 'sf_pro_displaylight';
    src: url('../fonts/sf-pro-display-light-webfont.woff2') format('woff2'),
         url('../fonts/sf-pro-display-light-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

@font-face {
    font-family: 'sf_pro_displaythin';
    src: url('../fonts/sf-pro-display-thin-webfont.woff2') format('woff2'),
         url('../fonts/sf-pro-display-thin-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

* {
	transition: all .2s;
}

/*pour le fade in*/
body {
	opacity: 0;
	/*background-color: #fff;*/
}

body, .showSettings button {
	margin: 0;
    cursor: default;
    color: white;
    text-shadow: 0 1px 15px rgba(0,0,0,0.5);

	font-family: sf_pro_displaylight;
	font-size: 16px;
	text-align: center;
}

p, h3 {
	margin: 0;
}

.background {
	transition: none;
	z-index: -1;
	position: fixed;
	width: 100vw;
	height: 100vh;
	background-color: #222;
	background-size: cover;
	background-position: center center;

	filter: blur(30px);
	transform: scale(1.1); 
}

.interface {
	height: 100vh;
	display: flex;
	flex-direction: column;
	justify-content: space-around;
}

.interface.pushed {
	margin-left: -20em;
}


#clock {
	font-family: sf_pro_displaythin;
	font-size: 6em;
}

.date {
	font-size: 1.5em;
}

.greetings {
	font-size: 3em;
	font-weight: lighter;
	/*padding-bottom: 0.3em;*/
}

.weather div {
	font-size: 1.5em;
}

div.w_widget {
	display: flex;
	height: 100px;
	justify-content: center;
	align-items: center;
}

.w_icon {
	height: 60px;
	padding-right: 10px;
}

div.w_widget_text {
	font-size: 3rem;
}

/* Searchbar section */

#searchbar_section {
	/*a enlever*/
	display: none;
	align-self: stretch;
}

.searchbar {
	opacity: 0.9;
	font-size: 1.5em;
	height: 50px;
	width: 500px;
	border: 0;
	border-radius: 4px;
	padding-left: 1em;
}



div.linkblocks {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	max-width: 900px;
	margin: 0 auto;
	padding: 1em 2em;
}

.block_parent {
	position: relative;
	margin: 1em;
}

.block_parent.removed {
	transform: scale(0);
	opacity: 0;
}

.block_parent img {
	width: 100%;
}

.block_parent .l_icon_wrap {
	width: 4.4em;
	height: 4.4em;
	margin: auto;
	position: relative;
	border-radius: 4px;
	background: white;
	border: .3em solid white;
	cursor: pointer;
}
.block_parent .l_icon_wrap:hover {
	border: .3em solid #007aff;
}

.block_parent a {
	display: block;
	color: white;
	text-decoration: none;
}

.block_parent p {
	display: inline-block;
	margin: .5em 0;
	max-width: 6em;
}

.block_parent button.remove {
	position: absolute;
	top: -1.2em;
	left: -1.2em;
	height: 30px;
	width: 30px;
	opacity: 0;
	border-radius: 100%;
	background: #ffffff;
	box-shadow: 0px 1px 10px 1.5px rgba(0, 0, 0, 0.3);
	z-index: 3;
	cursor: default;
}

.block_parent .remove.visible {
	cursor: pointer;
	opacity: 1;
}

.block_parent .remove:hover {
	background: #bbb;
}

.remove img {
	height: .9em;
	width: .9em;
	position:absolute;
	top: 50%;
	left:50%;
	transform: translate(-50%, -50%);
}

/*Wiggle animation*/
@keyframes wiggle {
	0% {
		transform: rotate(-1.5deg);
		animation-timing-function: ease-in;
	}
	50% {
		transform: rotate(2deg);
		animation-timing-function: ease-out;
	}
}

.block.wiggly {
	animation-name: wiggle;
	animation-iteration-count: infinite;
	transform-origin: 50% 10%;
	animation-duration: .25s;
}

@keyframes keyframes2 {
	0% {
		transform: rotate(1deg);
		animation-timing-function: ease-in;
	}
	50% {
		transform: rotate(-1.5deg);
		animation-timing-function: ease-out;
	}
}




@media screen and (min-width: 3000px) {
	body {font-size: 20px}
}

@media screen and (min-width: 2100px) {
	body {font-size: 18px}
}

@media screen and (max-width: 1400px) {
	body {font-size: 15px}
}

@media screen and (max-width: 700px) {
	body {font-size: 14px}
	div.interface {height: calc(100vh - 6em);margin: 1em 0 5em 0;}
}

